# AdriftRPG

./: .gitignore  BiomeFixes.md  Cargo.toml  FinalFixes  FixesFinalReview  MilestoneA.md  MoreFixes  PhasedExpansionPlan.md  ProceduralGrass  ProceduralTextureSystem  README.md  SkyLightingGuide  TextureAdditions.md  TextureFixesNeeded  VerticalSlice.md  VerticalSlice2.md  shader_test_err.txt
crates/game_bevy/: Cargo.toml
crates/game_bevy/src/: expanded.rs  lib.rs  plugin.rs  state.rs
crates/game_bevy/src/camera/: collision.rs  components.rs  debug.rs  environment.rs  fly_cam.rs  follow.rs  input.rs  mod.rs  orbit.rs  plugin.rs  spawn.rs  tests.rs  transform.rs
crates/game_bevy/src/data/: hot_reload.rs  mod.rs  plugin.rs  user_prefs.rs  watcher.rs
crates/game_bevy/src/debug_tools/: bindings.rs  mod.rs
crates/game_bevy/src/environment/: atmosphere.rs  audio.rs  biome_context.rs  biomes.rs  celestial.rs  clouds.rs  config_init.rs  fog.rs  lighting.rs  lighting_debug.rs  lighting_state.rs  materials.rs  mod.rs  simulation_time.rs  sky.rs  sky_config.rs  sky_lighting.rs  stars.rs  surface.rs  volumetric_scatter.rs  weather.rs
crates/game_bevy/src/interaction/: mod.rs
crates/game_bevy/src/interest/: mod.rs
crates/game_bevy/src/lod/: mod.rs
crates/game_bevy/src/performance/: mod.rs
crates/game_bevy/src/physics/: mod.rs  props.rs  water_physics.rs
crates/game_bevy/src/player/: mod.rs  motor.rs  movement.rs  spawn.rs
crates/game_bevy/src/scene/: bootstrap.rs  mod.rs
crates/game_bevy/src/staging/: mod.rs
crates/game_bevy/src/structures/: mod.rs
crates/game_bevy/src/terrain/: editing.rs  features.rs  horizon_skirt.rs  island_params.rs  material.rs  mesh_convert.rs  metrics.rs  mod.rs  pipeline.rs  recipe.rs  residency.rs
crates/game_bevy/src/ui/: hud.rs  main_menu.rs  mod.rs  options_panel.rs  overlay_camera.rs  setup_options.rs  tweaks.rs  world_select.rs
crates/game_bevy/src/vegetation/: grass.rs  mod.rs
crates/game_bevy/src/water/: mod.rs
crates/game_bevy/src/world/: mod.rs  preview.rs  profile.rs
crates/game_bevy/src/worldgen/: mod.rs
crates/game_data/: Cargo.toml
crates/game_data/src/: compile.rs  definitions.rs  hash.rs  lib.rs  load.rs  material_catalog.rs  material_overrides.rs  registry.rs  surface_registry.rs  validate.rs
crates/game_data/src/worldgen/: compile.rs  definitions.rs  hash.rs  load.rs  mod.rs  validate.rs
crates/game_data/tests/: coordinates.rs  validation.rs
crates/procedural_textures/: Cargo.toml
crates/procedural_textures/src/: arrays.rs  cache.rs  curves.rs  error.rs  lib.rs  maps.rs  material_recipe.rs  noise.rs  normal.rs  recipe.rs  seam.rs  texture_graph.rs
crates/procedural_textures/src/generators/: cobblestone.rs  ground.rs  mod.rs  rock.rs  sand.rs
crates/terrain_generation/: Cargo.toml
crates/terrain_generation/src/: atlas_bake.rs  chunk_gen.rs  density_ops.rs  field2d.rs  field_stack.rs  hydrology.rs  island_atlas.rs  lib.rs  noise.rs  recipe.rs  resolution.rs  river.rs  spawn.rs  surface_height.rs  topology.rs  traversal_tests.rs  vertical_slice.rs  water_body.rs  world_setup.rs
crates/terrain_generation/src/biomes/: id.rs  mod.rs  suitability.rs
crates/terrain_generation/src/boundary/: distance.rs  falloff.rs  mod.rs  pass.rs  validation.rs
crates/terrain_generation/src/caves/: graph.rs  graph_gen.rs  mod.rs  pass.rs  recipe.rs  sdf.rs  suitability.rs  validate.rs
crates/terrain_generation/src/climate/: mod.rs  trade_winds.rs
crates/terrain_generation/src/coast/: berm.rs  classify.rs  exposure.rs  marine.rs  mod.rs
crates/terrain_generation/src/compiler/: context.rs  error.rs  hydrology_validation.rs  mod.rs  pass.rs  report.rs  validation.rs
crates/terrain_generation/src/contract/: coordinates.rs  density.rs  manifest.rs  metadata.rs  mod.rs  version.rs
crates/terrain_generation/src/diagnostics/: export.rs  mod.rs
crates/terrain_generation/src/erosion/: constraints.rs  fluvial.rs  mod.rs  sediment.rs  thermal.rs
crates/terrain_generation/src/fields/: dense.rs  descriptor.rs  key.rs  mod.rs  registry.rs  resampling.rs  sampling.rs  scalar.rs  typed.rs
crates/terrain_generation/src/geology/: columns.rs  fields.rs  material.rs  mod.rs  pass.rs
crates/terrain_generation/src/hydrology/: backend.rs  features.rs  fill.rs  graph.rs  mod.rs  pass.rs  realize.rs  routing.rs  water_carve.rs
crates/terrain_generation/src/island_gen/: bathymetry.rs  biome_field.rs  carving.rs  coast.rs  erosion.rs  footprint.rs  hydrology.rs  mod.rs  params.rs  soil_field.rs  util.rs  validate.rs  volcano.rs
crates/terrain_generation/src/islands/: footprint.rs  mod.rs  pass.rs  seed.rs  skeleton.rs  validation.rs
crates/terrain_generation/src/macro_terrain/: bathymetry.rs  coast_distance.rs  elevation.rs  mod.rs
crates/terrain_generation/src/provider/: atlas_provider.rs  mod.rs  volumetric_provider.rs
crates/terrain_generation/src/regional/: blending.rs  generator.rs  mod.rs  pass.rs  seams.rs
crates/terrain_generation/src/soil/: mod.rs
crates/terrain_generation/src/strata/: material.rs  mod.rs
crates/terrain_generation/src/world/: atlas.rs  mod.rs  (+1 more)
crates/terrain_generation/tests/: atlas_runtime.rs  coordinates.rs  dual_pipeline.rs  edit_seams.rs  island_testbed_elevation_diag.rs  milestone_a.rs  milestone_b.rs  milestone_c.rs  milestone_d.rs  route_validation.rs  sampling_parity.rs  vs3_elevation_diag.rs  world_setup.rs
crates/terrain_material_bevy/: Cargo.toml
crates/terrain_material_bevy/src/: arrays.rs  bake.rs  lib.rs  material.rs  plugin.rs
crates/terrain_meshing/: Cargo.toml
crates/terrain_meshing/src/: dual_contouring.rs  lib.rs  surface_nets.rs
crates/terrain_meshing/tests/: determinism.rs  integration.rs
crates/terrain_surface/: Cargo.toml
crates/terrain_surface/src/: biome_bridge.rs  blend.rs  chunk_palette.rs  context.rs  lib.rs  material_id.rs  overlay.rs  region_palette.rs  registry.rs  scoring.rs
crates/terrain_tools/: Cargo.toml
crates/terrain_tools/examples/: elev_diag.rs
crates/terrain_tools/src/: bake_atlas.rs  bake_materials.rs  validate_catalog.rs
(+230 files in other folders)
