[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/voxel_core",
    "crates/terrain_generation",
    "crates/terrain_meshing",
    "crates/game_data",
    "crates/physics_bridge",
    "crates/game_bevy",
]

[package]
name = "rpg_adrift"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
game_bevy = { path = "crates/game_bevy" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
