[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/voxel_core",
    "crates/terrain_generation",
    "crates/terrain_meshing",
    "crates/terrain_surface",
    "crates/procedural_textures",
    "crates/terrain_material_bevy",
    "crates/terrain_tools",
    "crates/game_data",
    "crates/physics_bridge",
    "crates/game_bevy",
]

[workspace.dependencies]
bevy = "=0.19.0"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
rayon = "1"
blake3 = "1"
bytemuck = { version = "1", features = ["derive"] }

[package]
name = "rpg_adrift"
version = "0.1.0"
edition = "2024"
publish = false
default-run = "rpg_adrift"

[[bin]]
name = "rpg_adrift"
path = "src/main.rs"

[dependencies]
game_bevy = { path = "crates/game_bevy" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
terrain_generation = { path = "crates/terrain_generation" }
terrain_meshing = { path = "crates/terrain_meshing" }
voxel_core = { path = "crates/voxel_core" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
