[package]
name = "game_data"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
shared = { path = "../shared" }
voxel_core = { path = "../voxel_core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
