[package]
name = "procedural_textures"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
serde.workspace = true
thiserror.workspace = true
rayon.workspace = true
blake3.workspace = true
shared = { path = "../shared" }
serde_json = "1"
serde_yaml = "0.9"
bincode = "1"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
serde_yaml = "0.9"
