[package]
name = "terrain_generation"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
game_data = { path = "../game_data" }
shared = { path = "../shared" }
voxel_core = { path = "../voxel_core" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
game_data = { path = "../game_data" }
terrain_meshing = { path = "../terrain_meshing" }
