[package]
name = "terrain_generation"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
game_data = { path = "../game_data" }
shared = { path = "../shared" }
voxel_core = { path = "../voxel_core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
hex = "0.4"
zstd = "0.13"

[dev-dependencies]
game_data = { path = "../game_data" }
terrain_meshing = { path = "../terrain_meshing" }
