[package]
name = "terrain_tools"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "bake-materials"
path = "src/bake_materials.rs"

[[bin]]
name = "bake-atlas"
path = "src/bake_atlas.rs"

[[bin]]
name = "validate-catalog"
path = "src/validate_catalog.rs"

[[example]]
name = "elev_diag"
path = "examples/elev_diag.rs"

[dependencies]
game_data = { path = "../game_data" }
shared = { path = "../shared" }
terrain_generation = { path = "../terrain_generation" }
terrain_material_bevy = { path = "../terrain_material_bevy" }
procedural_textures = { path = "../procedural_textures" }
clap = { version = "4", features = ["derive"] }
serde_yaml = "0.9"
hex = "0.4"
bincode = "1"
